Add website skeleton

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,46 @@
     <link rel="stylesheet" href="style.css">
     <title>Emanuele's Blog</title>
 </head>
-<body>
-    <h1>Hello!</h1>
+<body id="top">
+    <div>
+        <a href="#home">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </div> 
+
+    <div id="home">
+        <h1>Hello!</h1>
+        <p>
+            Hello, my name is Emanuele Franchi and I am a programmer!
+        </p>
+        <p>
+            I first started learning about programming and computer science when I started studying computer engineering at university, in Pavia, in 2016.
+            Amongst the many first semester courses, there was one in particular that caught my attention.
+            It was a course that taught the basics of how a computer works, on a low level perspective.
+            After that I learnt my first programming language: C.
+            There, I also took courses on operating systems, data bases and object oriented programming.
+            Course after course, I started to realize my deep appreciation for computer science as a subject.
+            This led me to move to another university, in Turin, to start my computer science degree, in 2018.
+            The courses I had the most fun with talked about algorithms and data structures, automata theory and compilers, formal methods, functional programming and lambda calculus.
+        </p>
+        <p>
+            After three beautiful years of studying, in April 2022, I finally graduated getting the highest score, 110L, doing a lab thesis on the Vulkan graphics API.
+        </p>
+        <a href="#top">Back to the top</a>
+    </div>
+    <div id="projects">
+        <h1>Projects</h1>
+        <ul>
+            <li><a href="projects/exploring_vulkan.html">Exploring the Vulkan Graphics API</a></li>
+        </ul>
+        <a href="#top">Back to the top</a>
+    </div>
+    <div id="contact">
+        <h1>Contact</h1>
+        <p>
+            Feel free to send me a <a href="mailto: me.emanuele.xyz@gmail.com">mail</a>!
+        </p>
+        <a href="#top">Back to the top</a>
+    </div>
 </body>
 </html>
